Updated gallery and index, added images

--- a/gallery.html
+++ b/gallery.html
@@ -212,7 +212,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3layouts_gallery_grid">
 				<a href="images/yam.jpg" class="lsb-preview" data-lsb-group="header">
 					<div class="w3layouts_news_grid">
-						<img src="images/yam.jpg" alt="Yam Barn" class="img-responsive">
+						<img src="images/Yam.jpeg" alt="Yam Barn" class="img-responsive">
 						<div class="w3layouts_news_grid_pos">
 							<div class="wthree_text">
 								<h3>Yam Barn</h3>
