--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="w3_banner_info">
 				<div class="w3_banner_info_grid">
-					<h3 class="test">Your Trusted Source for Fresh Farm Products</h3>
+					<h3 class="test">Your Trusted Source for Farm Products</h3>
 					<p>We connect you directly with farmers to ensure you get fresh, healthy, and affordable
 						produce.
 						For orders and inquiries, simply reach out to us we’re here to serve you.</p>
