Add more pics and edit index

--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link
 		href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
 		rel='stylesheet' type='text/css'>
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -148,97 +148,91 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 		<!-- gallery -->
 		<div class="welcome">
-	<div class="container">
-		<h3 class="agileits_w3layouts_head">Our <span>Gallery</span></h3>
-		<div class="w3_agile_image">
-			<img src="images/1.png" alt=" " class="img-responsive" />
+			<div class="container">
+				<h3 class="agileits_w3layouts_head">Our <span>Gallery</span></h3>
+				<div class="w3_agile_image">
+					<img src="images/1.png" alt=" " class="img-responsive" />
+				</div>
+				<p class="agile_para">A glimpse of our farm projects, crops, and agricultural activities.</p>
+
+				<div class="w3layouts_gallery_grids">
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/cassava.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall1.jpg" alt="" class="img-responsive"
+									style="width:100%; height:250px; object-fit:cover;">
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/maize.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/maize.jpg" alt="" class="img-responsive"
+									style="width:100%; height:250px; object-fit:cover;">
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/palm.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall2.jpg" alt="" class="img-responsive"
+									style="width:100%; height:250px; object-fit:cover;">
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/rice.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/rice.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/yam.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/Yam.jpeg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall3.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall4.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall5.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 w3layouts_gallery_grid">
+						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+							<div class="w3layouts_news_grid">
+								<img src="images/gall6.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+							</div>
+						</a>
+					</div>
+
+					<div class="clearfix"> </div>
+				</div>
+			</div>
 		</div>
-		<p class="agile_para">A glimpse of our farm projects, crops, and agricultural activities.</p>
-
-		<div class="w3layouts_gallery_grids">
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/cassava.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/cassava.jpg" alt="Cassava Farm" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Cassava Farm</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/maize.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/maize.jpg" alt="Maize Plantation" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Maize Plantation</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/palm.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/palm.jpg" alt="Palm Trees" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Palm Trees</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/rice.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/rice.jpg" alt="Rice Field" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Rice Field</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/yam.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/Yam.jpeg" alt="Yam Barn" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Yam Barn</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-md-4 w3layouts_gallery_grid">
-				<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
-					<div class="w3layouts_news_grid">
-						<img src="images/harvest.jpg" alt="Harvest Time" class="img-responsive">
-						<div class="w3layouts_news_grid_pos">
-							<div class="wthree_text">
-								<h3>Harvest Time</h3>
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-</div>
 
 		<!-- //gallery -->
 		<script src="js/lsb.min.js"></script>
@@ -313,7 +307,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="clearfix"> </div>
 				</div>
-			</div>			
+			</div>
 		</div>
 		<!-- //footer -->
 		<!-- menu -->
