--- a/services.html
+++ b/services.html
@@ -162,8 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="col-xs-8 w3_agile_services_grid_right">
 							<h4>Cashew Nut Supply</h4>
-							<p>We source and supply premium cashew nuts in bulk, ensuring freshness and global export
-								quality standards.</p>
+							<p>We source and supply premium cashew nuts in bulk, ensuring quality and global export standards.</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -261,7 +260,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="agileinfo_services_bottom_grid2">
-							<p>We supply fresh maize and soybeans to meet the growing demand in food industries.</p>
+							<p>We supply quality maize and soybeans to meet the growing demand in food industries.</p>
 						</div>
 					</div>
 
