--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="w3_banner_info">
 				<div class="w3_banner_info_grid">
 					<h3 class="test">Your Trusted Source for Farm Products</h3>
-					<p>We connect you directly with farmers to ensure you get fresh, healthy, and affordable
+					<p>We connect you directly with farmers to ensure you get quality, healthy, and affordable
 						produce.
 						For orders and inquiries, simply reach out to us we’re here to serve you.</p>
 					<ul>
@@ -156,7 +156,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="modal-body">
 						<img src="images/4.jpg" alt=" " class="img-responsive" />
 						<p>
-							We specialize in supplying fresh and quality agricultural products directly from trusted
+							We specialize in supplying quality agricultural products directly from trusted
 							farms.
 							Our main products include <strong>cashew nuts, shea butter nuts, soybeans, cocoa beans,
 								sesame seeds,</strong> and <strong>maize</strong>.
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_banner_bottom_grid_right">
-						<h4>Fresh From the Farm</h4>
+						<h4>Quality from the Farm</h4>
 						<p>We supply natural and high-quality agricultural products directly from trusted farms.</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -235,7 +235,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="w3_agile_image">
 				<img src="images/1.png" alt=" " class="img-responsive" />
 			</div>
-			<p class="agile_para">We specialize in delivering fresh, high-quality agricultural products directly
+			<p class="agile_para">We specialize in delivering quality, agricultural products directly
 				from farms.
 				Our goal is to provide healthy and reliable farm produce while supporting local farmers.</p>
 		</div>
@@ -289,7 +289,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-6 wthree_welcome_bottom_left">
 			<h3>We work hard to grow and deliver <span>quality harvests</span></h3>
 			<p>Our goal is to connect farmers and buyers with the best agricultural products.
-				From cashew and cocoa to soybeans, sesame seeds, and maize, we provide fresh,
+				From cashew and cocoa to soybeans, sesame seeds, and maize, we provide quality,
 				reliable, and bulk supply for both local and international markets.</p>
 
 			<div class="col-md-6 wthree_welcome_bottom_left_grid">
