Edit gallary add another pic

--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3layouts_gallery_grids">
 
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/cassava.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall1.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall1.jpg" alt="" class="img-responsive"
 									style="width:100%; height:250px; object-fit:cover;">
@@ -176,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/palm.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall2.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall2.jpg" alt="" class="img-responsive"
 									style="width:100%; height:250px; object-fit:cover;">
@@ -185,15 +185,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/rice.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall7.jpeg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
-								<img src="images/rice.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
+								<img src="images/gall7.jpeg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/yam.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/yam.jpeg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/Yam.jpeg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
@@ -201,28 +201,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall3.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall3.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
 						</a>
 					</div>
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall4.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall4.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
 						</a>
 					</div>
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall5.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall5.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
 						</a>
 					</div>
 					<div class="col-md-4 w3layouts_gallery_grid">
-						<a href="images/harvest.jpg" class="lsb-preview" data-lsb-group="header">
+						<a href="images/gall6.jpg" class="lsb-preview" data-lsb-group="header">
 							<div class="w3layouts_news_grid">
 								<img src="images/gall6.jpg" alt="" class="img-responsive" style="width:100%; height:250px; object-fit:cover;">								
 							</div>
